Bug 456374 disabled attribute doesn't update native submenu r=josh sr=roc